--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
- 
+ <p>gosto de ir na casa da minha namorada</p>
+ <p>gosto de assistir esquadrão suicida</p>
+ <p>gosto de jogar fornite</p>
+ <p>gosto gosto de assistir o jogo do timão</p>
     
 
     
