--- a/index.html
+++ b/index.html
@@ -5,16 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body> 
+
+    <center><h1><meu hobby</h1<>/center>
+
  <p>gosto de ir na casa da minha namorada</p>
  <p>gosto de assistir esquadrão suicida</p>
  <p>gosto de jogar fornite</p>
  <p>gosto gosto de assistir o jogo do timão</p>
->>>>>>> 3c18fd98131920563bb8a1487929ca0a4e18facb
-    
+ 
+
+    </center><img height="250"src="Livia .png"<center>
+    <br>
+
 
     
 </body>
+<center><footer>aluno: Livia Teixeira da Silva</footer></center>
+<center><footer>Professor:Valmir Luiz Galvan</footer></center>
+<center><footer>Colégio: Estadual de Dois Vizinho</footer></center>
+<center><footer>Projeto: Meu hobby>/footer></center
 </html>
 
 
